2012-07-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/defaults.xml: new graph view: embedded-small

	* perllib/Torrus/Renderer/RRDtool.pm (rrd_make_graph_opts): new
	view parameter 'graph-colors' and URL variable Gcolors

2012-07-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm: new RRD graph parameter: border

2012-04-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 2.03 (bugfix release)

2012-03-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 2.02

2012-03-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm: new parameter
	RFC2863_IF_MIB::sort-by-name

2012-03-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Monitor*.pm, Collector*.pm: undef $hash{$key} is deprecated,
	replaced with delete

2012-02-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm: rrd-create-rra is added to the
	list of copied parameters.

2011-12-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/ConfigTree.pm (getRelative): now leaves can be
	referred to as [[nodeid]] in RPN.

	* perllib/Torrus/DevDiscover/RFC2670_DOCS_IF.pm (discover):
	new discovery parameter: RFC2670_DOCS_IF::suppress-all-cable-stats

2011-12-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* sup/styling/torrus-schema.pl: BpsIn now uses a slightly darker
	green, so that maxline can have a better contrast.

	* perllib/Torrus/Renderer/RRDtool.pm: MAX lines can now be
	displayed in graphs. New URL variables: Gmaxline,
	Gmaxlinestep. New multigraphs parameters: maxline-style-XX,
	maxline-color-XX.

	* perllib/Torrus/DevDiscover/APC_PowerNet.pm: new discovery module

2011-11-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm, perllib/Torrus/DevDiscover.pm: