@@ -45,6 +45,7 @@ dist_vendor_DATA = \
 	vendor/cisco.vdsl-line.xml \
 	vendor/cisco.wlc.xml \
 	vendor/compaq.cim.xml \
+	vendor/comtechefdata.xml \
 	vendor/empire.systemedge.xml \
 	vendor/empire.systemedge.ntregperf.xml \
 	vendor/f5.bigip.xml \
