@@ -1,3 +1,8 @@
+2012-07-08  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/ComtechEFData.pm: new discovery
+	module for Comtech EF Data satellite modems
+
 2012-07-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* xmlconfig/defaults.xml: new graph view: embedded-small
